--- a/component.html
+++ b/component.html
@@ -4,32 +4,33 @@
   <meta charset="utf-8">
   <title>CrossKnowledge - Code challenge</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"> 
+  <link href="movies.css" rel="stylesheet"> 
 </head>
 <body>
-  <article>
-    <header>
+  <article class="movie-item">
+    <header class="movie-item__header">
       <div>
-        <div>
+        <div class="movie-item__title">
           Avengers: Infinity War
         </div>
-        <div>
+        <div class="movie-item__duration">
           156 minutes
         </div>
       </div>
-      <div>
-        85% <img src="https://www.rottentomatoes.com/assets/pizza-pie/images/icons/global/cf-lg.3c29eff04f2.png" alt="">
+      <div class="movie-item__score">
+        85% <img class="movie-item__rotten_icon" src="https://www.rottentomatoes.com/assets/pizza-pie/images/icons/global/cf-lg.3c29eff04f2.png" alt="">
       </div>
     </header>
 
     <div>
-      <img src="https://i.ibb.co/9tLcR7s/avengers.jpg">
-      <a href="https://www.rottentomatoes.com/m/avengers_infinity_war" target="_blank">
+      <img class="movie-item__poster-image" src="https://i.ibb.co/9tLcR7s/avengers.jpg">
+      <a class="movie-item__details-button" href="https://www.rottentomatoes.com/m/avengers_infinity_war" target="_blank">
         Check review
       </a>
     </div>
 
     <footer>
-      <p>
+      <p class="movie-item__excerpt">
         An unprecedented cinematic journey ten years in the making and spanning the entire Marvel Cinematic Universe, Marvel Studios' "Avengers: Infinity War" brings to the screen the ultimate, deadliest showdown of all time. The Avengers and their Super Hero allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe. 
       </p>
     </footer>
